--- a/profilepic.css
+++ b/profilepic.css
@@ -1,8 +1,9 @@
-root{
-    --color: #e40046;
-}
 @import url('https://fonts.googleapis.com/css?family=Poppins&display=swap');
 @import url('https://fonts.googleapis.com/css?family=Bree+Serif&display=swap');
+
+root{
+    --color: #4169E1;
+}
 
 * {
 padding: 0;
@@ -81,7 +82,96 @@ body{
     transition: all .5s ease-in-out;
     outline: none;
 }
+.profile-option .notification i{
+    color: #fff;
+    font-size: 1.2rem;
+    transition: all .5s ease-in-out;
+}
 .profile-option:hover{
     background: #fff;
     border: 1px solid var(--color);
+}
+.profile-option:hover .notification i{
+    color: var(--color);
+}
+.profile-option .notification .alert-message{
+    position: absolute;
+    top: -5px;
+    right: 5px;
+    background: #fff;
+    color: var(--color);
+    border: 1px solid;
+    padding: 5px;
+    border-radius: 50%;
+    height: 20px;
+    width: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: .8rem;
+    font-weight: bold;
+}
+.main-bd{
+    width: 100%;
+    display: flex;
+    padding-right: 15px;
+}
+.profile-side{
+    width: 300px;
+    background: #fff;
+    box-shadow: 0px 3px 5px rgba(0,0,0,.2);
+    padding: 90px 30px 20px;
+    font-family: "Bree Seriff", serif;
+    margin-left: 10px;
+    z-index: 99;
+}
+.profile-side p{
+    margin-bottom: 7px;
+    color: #333;
+    font-size: 14px;
+}
+.profile-side p i{
+    color:var(--color);
+    margin-right: 10px;
+}
+.mobile-no i{
+    transform: rotateY(180deg);
+}
+.profile-btn {
+    display: flex;
+}
+button.chatbtn,
+button.createbtn{
+    border: 0;
+    padding: 10px;
+    width: 100%;
+    border-radius: 3px;
+    background: var(--color);
+    font-family: "Bree Seriff",sans-serif;
+    font-size: 1rem;
+    margin: 5px 2px;
+    cursor: pointer;
+    outline: none;
+    margin-bottom: 10px;
+    transition: background .3s ease-in-out;
+    box-shadow: 0px 5px 7px 0px rgba(0,0,0,.3);
+    color: #fff;
+}
+button.chatbtn:hover,
+button.createbtn:hover{
+    background: rgba(288,0,70,9);
+}
+button.chatbtn i,
+button.createbtn i{
+    margin-right: 5px;
+}
+.user-rating{
+    display: flex;
+}
+.user-rating h3{
+    font-size: 2.5rem;
+    font-weight: 200;
+    margin-right: 5px;
+    letter-spacing: 1px;
+    color: #696969;
 }
