--- a/index.css
+++ b/index.css
@@ -2,6 +2,37 @@
   margin: 0;
   padding: 0;
 }
+
+/* html,
+body {
+  width: 100%;
+  height: 100%;
+}
+
+body {
+  background: linear-gradient(
+    -45deg,
+    #ee7752,
+    #e73c7e,
+    #23a6d5,
+    #23d5ab
+  ) !important;
+  background-size: 400% 400%;
+  animation: gradient 15s ease infinite;
+}
+
+@keyframes gradient {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
+} */
+
 body {
   font-family: sans-serif;
 }
@@ -29,7 +60,7 @@ body {
 }
 
 .card-title h3 {
-  color: black;
+  color: cyan;
   text-align: center;
   padding: 20px 0;
   font-weight: 400;
@@ -44,7 +75,7 @@ body {
 }
 
 .card-body {
-  background-color: #1c2a35;
+  background-color: #3a464e;
   padding: 10px 0px;
   border-radius: 5px;
   width: 100%;
@@ -69,6 +100,10 @@ body {
   padding: 20px 0;
 }
 
+.submit-form {
+  color: cyan;
+}
+
 #login {
   color: cyan;
 }
@@ -86,7 +121,7 @@ body {
   left: 30px;
   width: 120px;
   height: 2px;
-  background-color: #008cff;
+  background-color: cyan;
   transition: 0.5s all ease;
 }
 
@@ -120,7 +155,7 @@ body {
   border: none;
   background-color: #171e24;
   color: #fff;
-  border-bottom: 1px solid #008cff;
+  border-bottom: 1px solid cyan;
   width: 350px;
   padding: 15px 0px;
   font-size: 15px;
@@ -129,7 +164,7 @@ body {
 }
 
 .submit-form {
-  background-color: #00ffff;
+  background-color: #171e24;
   color: rgb(255, 255, 255);
   border: none;
   padding: 10px 25px;
